--- a/src/index.scss
+++ b/src/index.scss
@@ -7,49 +7,62 @@ $font-family: 'Roboto', sans-serif;
 // stylelint-disable csstree/validator
 
 body {
+  background-image: url('./assets/fantasy-style-galaxy-background.jpg');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  font-family: $font-family;
+
   .card {
     border-radius: vars.$border-radius;
+    backdrop-filter: blur(5px);
+    border: 3px solid #ffffff4a;
   }
 
-  font-family: $font-family;
-}
-
-body:has(option[value='light']:checked) {
-  background-color: vars.$bg-light-color;
-  color: vars.$text-light-color;
-
-  .card {
-    background-color: vars.$card-light-bg;
-    box-shadow:
-      12px 12px 16px 0 rgba(0, 0, 0, 0.1),
-      -10px -10px 10px vars.$bg-light-color;
-  }
-}
-
-body:has(option[value='dark']:checked) {
-  background-color: vars.$bg-dark-color;
-  color: vars.$text-dark-color;
-
-  .card {
-    background-color: vars.$card-dark-bg;
-    box-shadow:
-      12px 12px 16px 0 rgba(15, 15, 15, 1),
-      10px 10px 10px vars.$bg-dark-color;
+  .inner-card {
+    padding: 1rem;
+    border-radius: 10px;
+    border: 3px solid #ffffff4a;
+    background-color: rgba(255, 255, 255, 0.2);
   }
 }
 
 .btn {
-  padding: 0.5rem 1rem;
+  padding: 0.8rem 2rem;
   font-size: 1.2rem;
-  font-weight: 500;
-  border-radius: 10px;
-  text-transform: capitalize;
-  border: none;
+  font-weight: 600;
+  border-radius: 25px;
+  letter-spacing: 1.2px;
+  border: 3px solid vars.$theme-color-1;
+  color: vars.$text-dark-color;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
 
   &:hover {
     scale: 1.1;
+  }
+}
+
+body:has(option[value='light']:checked) {
+  background-color: vars.$bg-light-color;
+  color: vars.$text-dark-color;
+}
+
+body:has(option[value='dark']:checked) {
+  background-color: vars.$bg-dark-color;
+  color: vars.$text-light-color;
+
+  .card {
+    border: 3px solid #1717174a;
+  }
+
+  .inner-card {
+    border: 3px solid #1717174a;
+    background-color: rgba(21, 21, 21, 0.2);
+  }
+
+  .btn {
+    color: vars.$text-light-color;
   }
 }
 
@@ -61,4 +74,30 @@ body:has(option[value='dark']:checked) {
 .btn-theme-color-2 {
   background-color: vars.$theme-color-2;
   color: vars.$text-dark-color;
+}
+
+.btn-bg-linear-gradient {
+  background: linear-gradient(90deg, vars.$theme-color-2, vars.$theme-color-1);
+
+  &:hover {
+    box-shadow: 0 0 200px vars.$theme-color-1;
+  }
+}
+
+.btn-scale-back-and-forth {
+  animation: scaleBackAndForth 4s infinite;
+
+  @keyframes scaleBackAndForth {
+    0% {
+      transform: scale(1);
+    }
+
+    50% {
+      transform: scale(1.1);
+    }
+
+    100% {
+      transform: scale(1);
+    }
+  }
 }
